fix spacing

--- a/apps/docs/app/ui/layout/aside/aside.css
+++ b/apps/docs/app/ui/layout/aside/aside.css
@@ -85,7 +85,7 @@
 }
 
 .hd-aside__link-level-3 {
-    padding-inline-start: var(--hd-space-3);
+    padding-inline-start: var(--hd-space-2);
 }
 
 .hd-aside__title {
