--- a/apps/docs/app/ui/layout/sectionPopover/sectionPopover.css
+++ b/apps/docs/app/ui/layout/sectionPopover/sectionPopover.css
@@ -65,7 +65,7 @@
 }
 
 .hd-section-popover__list-link-3{
-    padding-left: var(--hd-space-3);
+    padding-left: var(--hd-space-2);
 }
 
 .hd-section-popover__top-section {
